Minor corrections (mostly for mobile interaction) + Activated calendar pages to change on click + Removed theater positions border (visible only on drag over)

--- a/game_2/assets/css/styles.less
+++ b/game_2/assets/css/styles.less
@@ -202,8 +202,9 @@ a {
 		&#level_2 {
 			#game_board { width:100%; height:100%; .absPos(0,0); .z(0); }
 			#positions { .absPos(0,0); .z(50);
-				.position { .active; width:90px; height:154px; border:dotted 2px @white; .transition(all .2s ease-in-out);
+				.position { .active; width:90px; height:154px; border:dotted 2px transparent; .transition(all .2s ease-in-out);
 					&:hover { border:dotted 2px @red; }
+					&.hovered { border:dotted 2px @white; }
 					&.no_border { border:dotted 2px transparent; }
 					.figure { .active; width:90px; height:154px; margin:0; .shadowed(0,0,0); .absPos(0,0)!important; }
 					#f1 { background:transparent url("../img/f1.png") -90px 0; }
@@ -213,7 +214,7 @@ a {
 					#f5 { background:transparent url("../img/f5.png") -90px 0; }
 					#f6 { background:transparent url("../img/f6.png") -90px 0; }
 				}
-				#pos6 { .absPos(247px,1px); }
+				#pos6 { .absPos(249px,1px); }
 				#pos5 { .absPos(312px,92px); }
 				#pos4 { .absPos(382px,182px); }
 				#pos3 { .absPos(481px,317px); }
@@ -300,7 +301,7 @@ a {
 	#help {
 		.active; background:@white; .rounded(8px); .absPosBottom(25px,25px); .z(5000); padding:25px; width:400px; height:668px; .shadowed(0,2px,5px); .transition(all .2s ease-in-out);
 		&:hover { background:@white; }
-		&.hidden { .rounded(50%); .centeredText; .z(500); .absPosBottom(25px,25px); background-color:@orange; background-image:url("../img/info.svg"); background-repeat:no-repeat; background-size:100%; width:50px; height:27px; padding:13px 0 10px; &:hover { background-color:@textGray; .rounded(8px); } }		
+		&.hidden { .rounded(50%); .centeredText; .z(500); .absPosBottom(25px,25px); background-color:@orange; #help_icon { .absPos(0,0); width:100%; height:100%; background-image:url("../img/info.svg"); background-repeat:no-repeat; background-size:100%; } width:50px; height:27px; padding:13px 0 10px; &:hover { background-color:@textGray; .rounded(8px); } }		
 		.help_content { .leftText; .pt(13);
 			img { margin:0 0 25px; }
 			ul { margin:25px 0; padding:0; list-style-type:none; li { margin:0 0 5px; .clear; img { width:35px; background:#999; .rounded(50%); padding:5px; vertical-align:middle; margin:0 10px 0 0; } } }
